# good-will-solutions-cloud

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
aws/: configs.py  get_raw_data.py  send_application_to_service_department.py  send_application_to_supervisor.py  store_raw_data.py
gwsf/: configs.py  exceptions.py  functions.py  notifications.py  utils.py
tests/test_aws/: __init__.py  test_send_application_to_service_department.py  test_store_raw_data.py
tests/test_aws/fixtures/: dynamodb_create_applicant_event.json  msg_broker_raw_data.json
tests/test_gwsf/: test_notifications.py  test_utils.py
